plugins/flutter/pocketpy/lib/pocketpy_bindings_generated.dart


  late final _py_applydictPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              py_Ref,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Bool Function(py_Name name, py_Ref val,
                          ffi.Pointer<ffi.Void> ctx)>>,
              ffi.Pointer<ffi.Void>)>>('py_applydict');
  late final _py_applydict = _py_applydictPtr.asFunction<
      bool Function(
          py_Ref,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Bool Function(
                      py_Name name, py_Ref val, ffi.Pointer<ffi.Void> ctx)>>,
          ffi.Pointer<ffi.Void>)>();

  /// Get the i-th slot of the object.
  /// The object must have slots and `i` must be in valid range.
  py_ObjectRef py_getslot(
    py_Ref self,
    int i,
  ) {
    return _py_getslot(
      self,
      i,
    );
  }

  late final _py_getslotPtr =
      _lookup<ffi.NativeFunction<py_ObjectRef Function(py_Ref, ffi.Int)>>(
          'py_getslot');
  late final _py_getslot =
      _py_getslotPtr.asFunction<py_ObjectRef Function(py_Ref, int)>();

  /// Set the i-th slot of the object.
  void py_setslot(
    py_Ref self,
    int i,
    py_Ref val,
  ) {
    return _py_setslot(
      self,
      i,
      val,
    );
  }

  late final _py_setslotPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_Ref, ffi.Int, py_Ref)>>(
          'py_setslot');
  late final _py_setslot =
      _py_setslotPtr.asFunction<void Function(py_Ref, int, py_Ref)>();

  /// Get the current `function` object on the stack.
  /// Return `NULL` if not available.
  /// NOTE: This function should be placed at the beginning of your decl-based bindings.
  py_StackRef py_inspect_currentfunction() {
    return _py_inspect_currentfunction();
  }

  late final _py_inspect_currentfunctionPtr =
      _lookup<ffi.NativeFunction<py_StackRef Function()>>(
          'py_inspect_currentfunction');
  late final _py_inspect_currentfunction =
      _py_inspect_currentfunctionPtr.asFunction<py_StackRef Function()>();

  /// Get the current `module` object where the code is executed.
  /// Return `NULL` if not available.
  py_GlobalRef py_inspect_currentmodule() {
    return _py_inspect_currentmodule();
  }

  late final _py_inspect_currentmodulePtr =
      _lookup<ffi.NativeFunction<py_GlobalRef Function()>>(
          'py_inspect_currentmodule');
  late final _py_inspect_currentmodule =
      _py_inspect_currentmodulePtr.asFunction<py_GlobalRef Function()>();

  /// Bind a function to the object via "decl-based" style.
  /// @param obj the target object.
  /// @param sig signature of the function. e.g. `add(x, y)`.
  /// @param f function to bind.
  void py_bind(
    py_Ref obj,
    ffi.Pointer<ffi.Char> sig,
    py_CFunction f,
  ) {
    return _py_bind(
      obj,
      sig,
      f,
    );
  }

  late final _py_bindPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              py_Ref, ffi.Pointer<ffi.Char>, py_CFunction)>>('py_bind');
  late final _py_bind = _py_bindPtr
      .asFunction<void Function(py_Ref, ffi.Pointer<ffi.Char>, py_CFunction)>();

  /// Bind a method to type via "argc-based" style.
  /// @param type the target type.
  /// @param name name of the method.
  /// @param f function to bind.
  void py_bindmethod(
    int type,
    ffi.Pointer<ffi.Char> name,
    py_CFunction f,
  ) {
    return _py_bindmethod(
      type,
      name,
      f,
    );
  }

  late final _py_bindmethodPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              py_Type, ffi.Pointer<ffi.Char>, py_CFunction)>>('py_bindmethod');
  late final _py_bindmethod = _py_bindmethodPtr
      .asFunction<void Function(int, ffi.Pointer<ffi.Char>, py_CFunction)>();

  /// Bind a static method to type via "argc-based" style.
  /// @param type the target type.
  /// @param name name of the method.
  /// @param f function to bind.
  void py_bindstaticmethod(
    int type,
    ffi.Pointer<ffi.Char> name,
    py_CFunction f,
  ) {
    return _py_bindstaticmethod(
      type,
      name,
      f,
    );
  }

  late final _py_bindstaticmethodPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(py_Type, ffi.Pointer<ffi.Char>,
              py_CFunction)>>('py_bindstaticmethod');
  late final _py_bindstaticmethod = _py_bindstaticmethodPtr
      .asFunction<void Function(int, ffi.Pointer<ffi.Char>, py_CFunction)>();

  /// Bind a function to the object via "argc-based" style.
  /// @param obj the target object.
  /// @param name name of the function.
  /// @param f function to bind.
  void py_bindfunc(
    py_Ref obj,
    ffi.Pointer<ffi.Char> name,
    py_CFunction f,
  ) {
    return _py_bindfunc(
      obj,
      name,
      f,
    );
  }

  late final _py_bindfuncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              py_Ref, ffi.Pointer<ffi.Char>, py_CFunction)>>('py_bindfunc');
  late final _py_bindfunc = _py_bindfuncPtr
      .asFunction<void Function(py_Ref, ffi.Pointer<ffi.Char>, py_CFunction)>();

  /// Bind a property to type.
  /// @param type the target type.
  /// @param name name of the property.
  /// @param getter getter function.
  /// @param setter setter function. Use `NULL` if not needed.
  void py_bindproperty(
    int type,
    ffi.Pointer<ffi.Char> name,
    py_CFunction getter,
    py_CFunction setter,
  ) {
    return _py_bindproperty(
      type,
      name,
      getter,
      setter,
    );
  }

  late final _py_bindpropertyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(py_Type, ffi.Pointer<ffi.Char>, py_CFunction,
              py_CFunction)>>('py_bindproperty');
  late final _py_bindproperty = _py_bindpropertyPtr.asFunction<
      void Function(int, ffi.Pointer<ffi.Char>, py_CFunction, py_CFunction)>();

  /// Python equivalent to `getattr(self, name)`.
  bool py_getattr(
    py_Ref self,
    int name,
  ) {
    return _py_getattr(
      self,
      name,
    );
  }

  late final _py_getattrPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref, py_Name)>>(
          'py_getattr');
  late final _py_getattr =
      _py_getattrPtr.asFunction<bool Function(py_Ref, int)>();

  /// Python equivalent to `setattr(self, name, val)`.
  bool py_setattr(
    py_Ref self,
    int name,
    py_Ref val,
  ) {
    return _py_setattr(
      self,
      name,
      val,
    );
  }

  late final _py_setattrPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref, py_Name, py_Ref)>>(
          'py_setattr');
  late final _py_setattr =
      _py_setattrPtr.asFunction<bool Function(py_Ref, int, py_Ref)>();

  /// Python equivalent to `delattr(self, name)`.
  bool py_delattr(
    py_Ref self,
    int name,
  ) {
    return _py_delattr(
      self,
      name,
    );
  }

  late final _py_delattrPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref, py_Name)>>(
          'py_delattr');
  late final _py_delattr =
      _py_delattrPtr.asFunction<bool Function(py_Ref, int)>();

  /// Python equivalent to `self[key]`.
  bool py_getitem(
    py_Ref self,
    py_Ref key,
  ) {
    return _py_getitem(
      self,
      key,
    );
  }

  late final _py_getitemPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref, py_Ref)>>(
          'py_getitem');
  late final _py_getitem =
      _py_getitemPtr.asFunction<bool Function(py_Ref, py_Ref)>();

  /// Python equivalent to `self[key] = val`.
  bool py_setitem(
    py_Ref self,
    py_Ref key,
    py_Ref val,
  ) {
    return _py_setitem(
      self,
      key,
      val,
    );
  }

  late final _py_setitemPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref, py_Ref, py_Ref)>>(
          'py_setitem');
  late final _py_setitem =
      _py_setitemPtr.asFunction<bool Function(py_Ref, py_Ref, py_Ref)>();

  /// Python equivalent to `del self[key]`.
  bool py_delitem(
    py_Ref self,
    py_Ref key,
  ) {
    return _py_delitem(
      self,
      key,
    );
  }

  late final _py_delitemPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref, py_Ref)>>(
          'py_delitem');
  late final _py_delitem =
      _py_delitemPtr.asFunction<bool Function(py_Ref, py_Ref)>();

  /// Perform a binary operation.
  /// The result will be set to `py_retval()`.
  /// The stack remains unchanged after the operation.
  bool py_binaryop(
    py_Ref lhs,
    py_Ref rhs,
    int op,
    int rop,
  ) {
    return _py_binaryop(
      lhs,
      rhs,
      op,
      rop,
    );
  }

  late final _py_binaryopPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(py_Ref, py_Ref, py_Name, py_Name)>>('py_binaryop');
  late final _py_binaryop =
      _py_binaryopPtr.asFunction<bool Function(py_Ref, py_Ref, int, int)>();

  /// Get the i-th object from the top of the stack.
  /// `i` should be negative, e.g. (-1) means TOS.
  py_StackRef py_peek(
    int i,
  ) {
    return _py_peek(
      i,
    );
  }

  late final _py_peekPtr =
      _lookup<ffi.NativeFunction<py_StackRef Function(ffi.Int)>>('py_peek');
  late final _py_peek = _py_peekPtr.asFunction<py_StackRef Function(int)>();

  /// Push the object to the stack.
  void py_push(
    py_Ref src,
  ) {
    return _py_push(
      src,
    );
  }

  late final _py_pushPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_Ref)>>('py_push');
  late final _py_push = _py_pushPtr.asFunction<void Function(py_Ref)>();

  /// Push a `nil` object to the stack.
  void py_pushnil() {
    return _py_pushnil();
  }

  late final _py_pushnilPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('py_pushnil');
  late final _py_pushnil = _py_pushnilPtr.asFunction<void Function()>();

  /// Push a `None` object to the stack.
  void py_pushnone() {
    return _py_pushnone();
  }

  late final _py_pushnonePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('py_pushnone');
  late final _py_pushnone = _py_pushnonePtr.asFunction<void Function()>();

  /// Push a `py_Name` to the stack. This is used for keyword arguments.
  void py_pushname(
    int name,
  ) {
    return _py_pushname(
      name,
    );
  }

  late final _py_pushnamePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_Name)>>('py_pushname');
  late final _py_pushname = _py_pushnamePtr.asFunction<void Function(int)>();

  /// Pop an object from the stack.
  void py_pop() {
    return _py_pop();
  }

  late final _py_popPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('py_pop');
  late final _py_pop = _py_popPtr.asFunction<void Function()>();

  /// Shrink the stack by n.
  void py_shrink(
    int n,
  ) {
    return _py_shrink(
      n,
    );
  }

  late final _py_shrinkPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('py_shrink');
  late final _py_shrink = _py_shrinkPtr.asFunction<void Function(int)>();

  /// Get a temporary variable from the stack.
  py_StackRef py_pushtmp() {
    return _py_pushtmp();
  }

  late final _py_pushtmpPtr =
      _lookup<ffi.NativeFunction<py_StackRef Function()>>('py_pushtmp');
  late final _py_pushtmp = _py_pushtmpPtr.asFunction<py_StackRef Function()>();

  /// Get the unbound method of the object.
  /// Assume the object is located at the top of the stack.
  /// If return true:  `[self] -> [unbound, self]`.
  /// If return false: `[self] -> [self]` (no change).
  bool py_pushmethod(
    int name,
  ) {
    return _py_pushmethod(
      name,
    );
  }

  late final _py_pushmethodPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Name)>>('py_pushmethod');
  late final _py_pushmethod =
      _py_pushmethodPtr.asFunction<bool Function(int)>();
